NVLI-349 NVLI-351 Adding style fixes for header responsive, sticky for mobile and table, also placing of language dropdown block and its styles spacings

--- a/docroot/themes/nvli/components/asset-builds/css/components.css
+++ b/docroot/themes/nvli/components/asset-builds/css/components.css
@@ -321,27 +321,60 @@ body:not(.is-path-frontpage) .layout-3col {
  * THIS FILE CONTAINS ALL THE STYLES FOR HEADER
  * @author Shruti 
  */
-div#block-userlanguageblock {
+div#block-userlanguageblock,
+div#block-languagedropdownswitcher {
   float: right;
-  margin: 23px 10px;
+  margin: 20px 10px;
 }
 
-div#block-userlanguageblock p {
+@media only screen and (max-width: 767px) {
+  div#block-userlanguageblock,
+  div#block-languagedropdownswitcher {
+    margin: 10px;
+  }
+}
+
+div#block-userlanguageblock p,
+div#block-languagedropdownswitcher p {
   margin: 0 5px;
 }
 
-div#block-userlanguageblock span {
+div#block-userlanguageblock span,
+div#block-languagedropdownswitcher span {
   margin: 0 5px;
   color: #666666;
 }
 
-div#block-userlanguageblock span img {
+div#block-userlanguageblock span img,
+div#block-languagedropdownswitcher span img {
   width: 1vw;
   margin: 0 3px;
 }
 
-div#block-userlanguageblock span.user-dropdown img:first-child {
+@media only screen and (max-width: 1024px) {
+  div#block-userlanguageblock span img,
+  div#block-languagedropdownswitcher span img {
+    width: 20px;
+  }
+}
+
+div#block-userlanguageblock span.user-dropdown img:first-child,
+div#block-languagedropdownswitcher span.user-dropdown img:first-child {
   width: 2vw;
+}
+
+@media only screen and (max-width: 1024px) {
+  div#block-userlanguageblock span.user-dropdown img:first-child,
+  div#block-languagedropdownswitcher span.user-dropdown img:first-child {
+    width: 30px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  div#block-languagedropdownswitcher {
+    width: 27%;
+    margin: 13px 10px;
+  }
 }
 
 header {
@@ -359,15 +392,34 @@ header.sticky-header {
   z-index: 3;
   visibility: visible;
   height: 64px;
+  left: 0;
+}
+
+@media only screen and (max-width: 767px) {
+  header.sticky-header {
+    height: 50px;
+  }
 }
 
 header.sticky-header #block-userlanguageblock {
   margin: 14px 10px;
 }
 
+@media only screen and (max-width: 767px) {
+  header.sticky-header #block-userlanguageblock {
+    margin: 7px 10px;
+  }
+}
+
 div#block-nvli-branding {
   float: left;
   padding: 14px 24px;
+}
+
+@media only screen and (max-width: 767px) {
+  div#block-nvli-branding {
+    padding: 10px;
+  }
 }
 
 div#block-nvli-branding.sticky-branding {
@@ -376,14 +428,38 @@ div#block-nvli-branding.sticky-branding {
   padding: 7px 24px;
 }
 
+@media only screen and (max-width: 1024px) {
+  div#block-nvli-branding.sticky-branding {
+    max-width: 128px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  div#block-nvli-branding.sticky-branding {
+    width: 32%;
+  }
+}
+
 .site-logo img {
   float: left;
   margin: 0 20px 0 0;
 }
 
+@media only screen and (max-width: 767px) {
+  .site-logo img {
+    width: 51px;
+  }
+}
+
 .site-name {
   float: left;
   margin: 12px 0 0;
+}
+
+@media only screen and (max-width: 1024px) {
+  .site-name {
+    display: none;
+  }
 }
 
 .site-name a {
@@ -628,13 +704,6 @@ div#block-homepagebanner-2 .field--type-text-with-summary .banner-text p:nth-chi
   left: 50%;
 }
 
-.mirador-osd,
-.image-view,
-.bottomPanel,
-.window {
-  background: transparent;
-}
-
 .mirador-viewer #workspace .layout-slot {
   width: 100% !important;
 }
@@ -729,6 +798,14 @@ div#block-homepagebanner-2 .field--type-text-with-summary .banner-text p:nth-chi
   z-index: 1;
 }
 
+@media only screen and (max-width: 767px) {
+  #block-customsearchblock-2 {
+    position: relative;
+    top: 0;
+    display: none;
+  }
+}
+
 #block-customsearchblock-2 #new-custom-search-form {
   display: inline-block;
   margin: 0 36.1%;
@@ -781,6 +858,12 @@ div#block-homepagebanner-2 .field--type-text-with-summary .banner-text p:nth-chi
   margin: 0;
 }
 
+@media only screen and (max-width: 767px) {
+  #block-customsearchblock-2 #new-custom-search-form {
+    margin: 0;
+  }
+}
+
 #block-customsearchblock-2.sticky-search-header {
   position: relative;
   top: 0;
@@ -788,7 +871,7 @@ div#block-homepagebanner-2 .field--type-text-with-summary .banner-text p:nth-chi
 
 #block-customsearchblock-2.sticky-search-header #new-custom-search-form {
   float: right;
-  margin: 7px 20px 0 0;
+  margin: 15px 20px 0 0;
 }
 
 #block-customsearchblock-2.sticky-search-header #new-custom-search-form input {
