--- a/docroot/themes/nvli/components/components/zen-nvli/_blocks.scss
+++ b/docroot/themes/nvli/components/components/zen-nvli/_blocks.scss
@@ -96,11 +96,19 @@
   width: 100%;
   text-align: center;
   z-index: 1;
+  @media only screen and (max-width: 767px) {
+    position: relative;
+    top:0;
+    display: none;
+  }
 
   #new-custom-search-form {
     @include search-block;
     display: inline-block;
     margin: 0 36.1%;
+    @media only screen and (max-width: 767px) {
+      margin: 0;
+    }
   }
 
   &.sticky-search-header {
@@ -109,7 +117,7 @@
 
     #new-custom-search-form {
       float: right;
-      margin: 7px 20px 0 0;
+      margin: 15px 20px 0 0;
       
       input {
         line-height: 30px;
